[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["Miriam Zimmerman <miriam@mutexlox.com>"]
edition = "2018"

[dependencies]
regex = "1"

[[bin]]
name = "day01"
path = "src/day01_chronal_calibration.rs"

[[bin]]
name = "day02"
path = "src/day02_id_checksums.rs"

[[bin]]
name = "day03"
path = "src/day03_fabric.rs"

[[bin]]
name = "day04"
path = "src/day04_guards.rs"

[[bin]]
name = "day05"
path = "src/day05_polymer.rs"

[[bin]]
name = "day06"
path = "src/day06_manhattan.rs"

[[bin]]
name = "day07"
path = "src/day07_sum_of_parts.rs"

[[bin]]
name = "day08"
path = "src/day08_trees.rs"

[[bin]]
name = "day09"
path = "src/day09_marbles.rs"

[[bin]]
name = "day10"
path = "src/day10_stars_align.rs"

[[bin]]
name = "day11"
path = "src/day11_chronal_charge.rs"

[[bin]]
name = "day12"
path = "src/day12_life.rs"

[[bin]]
name = "day13"
path = "src/day13_carts.rs"

[[bin]]
name = "day14"
path = "src/day14_recipe.rs"

[[bin]]
name = "day16"
path = "src/day16_interp.rs"

[[bin]]
name = "day17"
path = "src/day17_water.rs"

[[bin]]
name = "day18"
path = "src/day18_life.rs"

[lib]
name = "interp"
path = "src/interp.rs"
